--- a/web/css/main.styl
+++ b/web/css/main.styl
@@ -124,14 +124,14 @@ Global elements
 .min-width
   position relative
   height 100%
-  max-width 980px
+  width 980px
   min-width 980px
   margin 0 auto
 .content
   position relative
   overflow hidden
   height 70%
-  max-width 980px
+  width 980px
   min-width 980px
   margin 15% auto
 
@@ -278,6 +278,8 @@ for num in (0..8)
   height 100%
   position relative
   .slide
+    //min-width 980px
+    width 100%
     position absolute
     margin 0 auto
     top 0
@@ -333,6 +335,7 @@ for num in (0..8)
   left 0
   width 100%
   min-width 980px
+  //max-width 980px
   background  url("../images/bg-image.jpg") no-repeat center center
   height 641px
   background-size cover
